openshift/create-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datastore
  namespace: default
spec:
  selector:
    app: datastore
  ports:
    - name: 5984-tcp
      protocol: TCP
      port: 5984
      targetPort: 5984
